<resources>
	<string name="app_name" translatable="false">Gameprofiles Editor</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="press_more_to_exit">Press more to exit</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="confirm">Confirm</string>
	<string name="saving">Saving</string>
	<string name="please_wait">please wait&#8230;</string>
	<string name="fail_on_save">Fail during saving</string>
	<string name="success_save">Success</string>
	<string name="licenses">Licenses</string>
	<string name="about" formatted="false">Gameprofiles config changer for Asphalt 8\n\nAndroid version:%s\nDevice name:%s</string>
	<string name="open_with">Open with&#8230;</string>

	<string name="action_settings">Settings</string>
	<string name="action_save">Save</string>
	<string name="action_load">Load</string>
	<string name="action_exit">Exit</string>
	<string name="action_about">About</string>


	<!-- Navigation bar -->
	<string name="nav_action_go_gpu">GPU</string>
	<string name="nav_action_go_cpu">CPU</string>
	<string name="nav_action_go_mem">Memory</string>
	<string name="nav_action_go_res">Resolution</string>
	<string name="nav_action_go_opt">Effects</string>
	<string name="nav_action_go_specifics">Devices</string>

	<string name="nav_group_other">Other</string>
	<string name="nav_action_apply_template">Apply template</string>
	<string name="nav_action_apply_custom_template">Apply custom template</string>
	<string name="nav_select_panel">Select profiles panel</string>


	<!-- Profiles titles -->
	<string name="profile_cpu">CPU Profiles</string>
	<string name="profile_gpu">GPU Profiles</string>
	<string name="profile_mem">Memory Profiles</string>
	<string name="profile_res">Resolution Profiles</string>
	<string name="profile_opt">Effects Profiles</string>
	<string name="profile_specifics">Device list</string>


	<!-- Editor panel -->
	<string name="editor_edit">Edit</string>
	<string name="editor_remove">Remove</string>
	<string name="editor_removing">Removing:</string>
	<string name="editor_confirm" translatable="false">@string/confirm</string>
	<string name="editor_enter_name">enter name</string>
	<string name="editor_enter_value">enter value</string>
	<string name="editor_new_profile">New profile</string>
	<string name="editor_already_contains">Already contains</string>
	<string name="editor_name">Name</string>
	<string name="editor_value">Value</string>
	<string name="editor_create_new_fx">Prev create new Effects profile</string>
	<string name="editor_create_new_cpu">Prev create new CPU profile</string>
	<string name="editor_create_new_gpu">Prev create new GPU profile</string>
	<string name="editor_create_new_res">Prev create new Resolution profile</string>
	<string name="editor_create_new_mem">Prev create new Memory profile</string>
	<string name="editor_renaming">Renaming:</string>
	<string name="editor_cloning">Cloning:</string>
	<string-array name="editor_device_options">
		<item>Rename</item>
		<item>Clone</item>
	</string-array>
	<string name="editor_select">Select option</string>


	<!-- Other -->
	<string name="renderer_new_renderer">New renderer</string>
	<string name="renderer_edit_param">Edit parameter</string>
	<string name="renderer_param">Parameter</string>
	<string name="renderer_params">Params</string>
	<string name="renderer_name" translatable="false">@string/editor_name</string>
	<string name="renderer_value" translatable="false">@string/editor_value</string>
	<string name="processor">Processor</string>


	<!-- JSON loader -->
	<string name="gp_file_exists">Gameprofiles file founded</string>
	<string name="gp_load">Load this file?</string>
	<string-array name="gp_file_operations">
		<item>New file</item>
		<item>Open file</item>
	</string-array>
	<string name="gp_open_failed">Open failed</string>
	<string name="gp_select_template">Select template</string>
	<string name="gp_custom_templates">Custom templates are located in the &quot;/sdcard/egor9814/gameprofiles/&quot; with extension &quot;.json&quot;</string>


	<string name="title_activity_license_view" translatable="false">LicenseViewActivity</string>
	<string name="large_text" translatable="false">
		"Material is the metaphor.\n\n"

		"A material metaphor is the unifying theory of a rationalized space and a system of motion."
		"The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
		"technologically advanced and open to imagination and magic.\n"
		"Surfaces and edges of the material provide visual cues that are grounded in reality. The "
		"use of familiar tactile attributes helps users quickly understand affordances. Yet the "
		"flexibility of the material creates new affordances that supercede those in the physical "
		"world, without breaking the rules of physics.\n"
		"The fundamentals of light, surface, and movement are key to conveying how objects move, "
		"interact, and exist in space and in relation to each other. Realistic lighting shows "
		"seams, divides space, and indicates moving parts.\n\n"

		"Bold, graphic, intentional.\n\n"

		"The foundational elements of print based design typography, grids, space, scale, color, "
		"and use of imagery guide visual treatments. These elements do far more than please the "
		"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
		"imagery, large scale typography, and intentional white space create a bold and graphic "
		"interface that immerse the user in the experience.\n"
		"An emphasis on user actions makes core functionality immediately apparent and provides "
		"waypoints for the user.\n\n"

		"Motion provides meaning.\n\n"

		"Motion respects and reinforces the user as the prime mover. Primary user actions are "
		"inflection points that initiate motion, transforming the whole design.\n"
		"All action takes place in a single environment. Objects are presented to the user without "
		"breaking the continuity of experience even as they transform and reorganize.\n"
		"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
		"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

		"3D world.\n\n"

		"The material environment is a 3D space, which means all objects have x, y, and z "
		"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
		"positive z-axis extending towards the viewer. Every sheet of material occupies a single "
		"position along the z-axis and has a standard 1dp thickness.\n"
		"On the web, the z-axis is used for layering and not for perspective. The 3D world is "
		"emulated by manipulating the y-axis.\n\n"

		"Light and shadow.\n\n"

		"Within the material environment, virtual lights illuminate the scene. Key lights create "
		"directional shadows, while ambient light creates soft shadows from all angles.\n"
		"Shadows in the material environment are cast by these two light sources. In Android "
		"development, shadows occur when light sources are blocked by sheets of material at "
		"various positions along the z-axis. On the web, shadows are depicted by manipulating the "
		"y-axis only. The following example shows the card with a height of 6dp.\n\n"

		"Resting elevation.\n\n"

		"All material objects, regardless of size, have a resting elevation, or default elevation "
		"that does not change. If an object changes elevation, it should return to its resting "
		"elevation as soon as possible.\n\n"

		"Component elevations.\n\n"

		"The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
		"does not vary from 6dp in one app to 16dp in another app).\n"
		"Components may have different resting elevations across platforms, depending on the depth "
		"of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

		"Responsive elevation and dynamic elevation offsets.\n\n"

		"Some component types have responsive elevation, meaning they change elevation in response "
		"to user input (e.g., normal, focused, and pressed) or system events. These elevation "
		"changes are consistently implemented using dynamic elevation offsets.\n"
		"Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
		"to the component’s resting state. They ensure that elevation changes are consistent "
		"across actions and component types. For example, all components that lift on press have "
		"the same elevation change relative to their resting elevation.\n"
		"Once the input event is completed or cancelled, the component will return to its resting "
		"elevation.\n\n"

		"Avoiding elevation interference.\n\n"

		"Components with responsive elevations may encounter other components as they move between "
		"their resting elevations and dynamic elevation offsets. Because material cannot pass "
		"through other material, components avoid interfering with one another any number of ways, "
		"whether on a per component basis or using the entire app layout.\n"
		"On a component level, components can move or be removed before they cause interference. "
		"For example, a floating action button (FAB) can disappear or move off screen before a "
		"user picks up a card, or it can move if a snackbar appears.\n"
		"On the layout level, design your app layout to minimize opportunities for interference. "
		"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
		"when a user tries to pick up one of cards.\n\n"
	</string>
</resources>
